--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "dev" : "nodemon index.js"
   },
   "keywords": [],
   "author": "",
@@ -12,6 +13,8 @@
   "dependencies": {
     "dotenv": "^16.4.2",
     "express": "^4.18.2",
+    "ioredis": "^5.3.2",
+    "nodemon": "^3.1.0",
     "sigma-error": "^1.0.58"
   }
 }
