--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "dev" : "nodemon index.js"
+    "dev": "nodemon index.js"
   },
   "keywords": [],
   "author": "",
@@ -15,6 +15,7 @@
     "express": "^4.18.2",
     "ioredis": "^5.3.2",
     "nodemon": "^3.1.0",
+    "redis": "^4.6.13",
     "sigma-error": "^1.0.58"
   }
 }
